--- a/UiTemplate/res/menu/navigation_menu.xml
+++ b/UiTemplate/res/menu/navigation_menu.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:icon="@drawable/ic_home" android:title="@string/action_home" android:id="@+id/home"></item>
-    <item android:icon="@drawable/ic_settings" android:title="@string/action_settings" android:id="@+id/settings"></item>
-   
+    <item
+        android:id="@+id/home"
+        android:icon="@drawable/ic_home"
+        android:title="@string/action_home">
+    </item>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_settings">
+    </item>
+
 </menu>
