--- a/UiTemplate/res/layout/fragment_navigation.xml
+++ b/UiTemplate/res/layout/fragment_navigation.xml
@@ -3,6 +3,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
+
+    <Button
+        android:id="@+id/navbar_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
     <ListView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@android:id/list" android:divider="@android:color/transparent"
