--- a/UiTemplate/res/layout/default_navbar.xml
+++ b/UiTemplate/res/layout/default_navbar.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#AAFFFFFF"
+    android:orientation="vertical" >
 
     <Button
         android:id="@+id/navbar_button"
@@ -10,9 +11,12 @@
         android:layout_height="wrap_content"
         android:text="Button" />
 
-    <ListView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@android:id/list" android:divider="@android:color/transparent"
-              android:dividerHeight="0dp">
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" >
     </ListView>
+
 </LinearLayout>
