--- a/SimpleUiExamples/res/layout/swipe_list_item.xml
+++ b/SimpleUiExamples/res/layout/swipe_list_item.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:tag="back" >
+        android:tag="back"
+        android:visibility="invisible" >
 
         <Button
             android:id="@+id/swype_list_item_back_button"
