added toast util class to show custom interactive toast like information

--- a/SimpleUI/res/values/styles.xml
+++ b/SimpleUI/res/values/styles.xml
@@ -13,4 +13,9 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="fade_animation">
+        <item name="@android:windowEnterAnimation">@anim/popup_show</item>
+        <item name="@android:windowExitAnimation">@anim/popup_hide</item>
+    </style>
+
 </resources>
