--- a/SimpleUI/res/values/styles.xml
+++ b/SimpleUI/res/values/styles.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="LTheme" parent="AppTheme.Base" />
+    <style name="LTheme" parent="AppTheme.Base">
+
+        <!-- Main material theme colors -->
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/color_accent</item>
+        <!-- Other material theme colors 
+        <item name="colorButtonNormal">@color/color_button_normal</item>
+        <item name="colorControlNormal">@color/color_control_normal</item>
+        <item name="colorControlActivated">@color/color_control_activated</item>
+        <item name="colorControlHighlight">@color/color_control_highlight</item>
+        <item name="colorSwitchThumbNormal">@color/color_switch_thumbNormal</item>
+        -->
+    </style>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
+        <!-- Enable Transparency: -->
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
