--- a/SimpleUI/res/values/styles.xml
+++ b/SimpleUI/res/values/styles.xml
@@ -7,13 +7,13 @@
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
-        <!-- Other material theme colors 
+        <!-- Other material theme colors -->
         <item name="colorButtonNormal">@color/color_button_normal</item>
         <item name="colorControlNormal">@color/color_control_normal</item>
         <item name="colorControlActivated">@color/color_control_activated</item>
         <item name="colorControlHighlight">@color/color_control_highlight</item>
         <item name="colorSwitchThumbNormal">@color/color_switch_thumbNormal</item>
-        -->
+        
     </style>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat">
