now the material colors will be used on devices API<5 as well

--- a/SimpleUI/res/values/colors.xml
+++ b/SimpleUI/res/values/colors.xml
@@ -40,8 +40,8 @@
     <color name="blue">#3F51B5</color>
     <color name="yellow">#FFEB3B</color>
     <color name="teal">#008080</color>
-    <color name="Orange">#FF9800</color>
-    <color name="Grey">#9E9E9E</color>
+    <color name="orange">#FF9800</color>
+    <color name="grey">#9E9E9E</color>
 
     <!-- Generic #AARRGGBB -->
     <!-- Generic Dark -->
