--- a/SimpleUiExamples/res/values/colors.xml
+++ b/SimpleUiExamples/res/values/colors.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Main material theme colors #AARRGGBB -->
+    <!-- colorPrimary is used for the default action bar background -->
+    <color name="color_primary">@color/blue</color>
+    <!-- colorPrimaryDark is used for the status bar -->
+    <color name="color_primary_dark">@color/green</color>
+    <!-- colorAccent is used to tint widgets -->
+    <color name="color_accent">@color/yellow</color>
+
+    <!-- additional material colors -->
+    <color name="color_button_normal">@color/red</color>
+    <color name="color_control_normal">@color/teal</color>
+    <color name="color_control_activated">@color/purple</color>
+    <color name="color_control_highlight">@color/Brown</color>
+    <color name="color_switch_thumbNormal">@color/orange</color>
+
 </resources>
