--- a/SimpleUiExamples/res/values/colors.xml
+++ b/SimpleUiExamples/res/values/colors.xml
@@ -7,13 +7,14 @@
     <!-- colorPrimaryDark is used for the status bar -->
     <color name="color_primary_dark">@color/blue_dark</color>
     <!-- colorAccent is used to tint widgets -->
-    <color name="color_accent">@color/orange</color>
+    <color name="color_accent">@color/yellow</color>
 
-    <!-- additional material colors -->
-    <color name="color_button_normal">@color/orange</color>
-    <color name="color_control_normal">@color/orange</color>
-    <color name="color_control_activated">@color/orange</color>
-    <color name="color_control_highlight">@color/orange_light</color>
-    <color name="color_switch_thumbNormal">@color/orange</color>
+    <!-- additional material colors 
+    <color name="color_button_normal">@color/color_accent</color>
+    <color name="color_control_normal">@color/color_accent</color>
+    <color name="color_control_activated">@color/color_accent</color>
+    <color name="color_control_highlight">@color/color_accent</color>
+    <color name="color_switch_thumbNormal">@color/color_accent</color>
+    -->
 
 </resources>
